--- a/Shared/Base.lproj/Localizable.strings
+++ b/Shared/Base.lproj/Localizable.strings
@@ -1,6 +1,7 @@
-Awoca = "Awoca";
+Awoca = "awoca";
 Button.open = "Open Repository";
 Error.no.access.title = "Can't access URL";
 Error.no.access.subtitle = "Try opening this Repository again from the Launch Screen";
 Error.no.repository.title = "This is not a Repository";
-Error.no.repository.subtitle = "For the moment Awoca only supports already existing Repositories, soon you will be able to create new ones";
+Error.no.repository.subtitle = "For the moment awoca only supports already existing Repositories, soon you will be able to create new ones";
+Commits.title = "Commits";
